<resources>
    <string name="app_name">BikeShare2</string>
    <string name="balance">Balance:</string>
    <string name="add_funds">Add Funds</string>
    <string name="location">Location:</string>
    <string name="currency">kr</string>
    <string name="currency_per_hour">kr/hr</string>
    <string name="enter_a_type">Enter a type</string>
    <string name="select_a_location">Select a location</string>
    <string name="bike_type">Bike Type:</string>
    <string name="price">Price:</string>
    <string name="add_bike">Add Bike</string>
    <string name="photo_of_the_bike">Photo of the bike</string>
    <string name="button_to_capture_a_photo_of_the_bike">Button to capture a photo of the bike</string>
    <string name="rent_bike">Rent Bike</string>
    <string name="end_ride">End Ride</string>
    <string name="bike">Bike</string>
    <string name="ride">Ride</string>
    <string name="title_activity_main">Bike Share</string>
    <string name="title_vacant_bikes">Vacant Bikes</string>
    <string name="title_active_rides">Active Rides</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_maps">View Map</string>
</resources>
